[project]
name = "nebula-nursery"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Callum Morrison", email = "unknown@unknown.com" },
    { name = "John Radley", email = "jradxl@gmail.com" }
]
dependencies = [
    "PyInquirer==1.0.3",
    "cryptography>=41.0.5",
    "flask>=3.0.0",
    "pyngrok>=7.0.0",
    "Werkzeug>=3.0.1",
]
readme = "README.md"
##requires-python = ">= 3.8"
##3.9 is max for PyInquirer
requires-python = "<=3.9.18"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
